# desafio-02-etl-nyc-taxi

./: .gitignore  CLAUDE.md  README.md  dashboard.py  etl.py  pyproject.toml  requirements.txt
.claude/agents/: bigquery-sql-expert.md  mussum-streamlit-dev.md  python-project-engineer.md
src/: __init__.py  config.py  derive.py  etl.py
src/Aggregate/: __init__.py  aggregate.py
src/Extract/: __init__.py  extract.py  read_csv.py
src/Load/: load.py
src/Transform/: transform.py
src/Validate/: rules.py  validate.py
tests/: test_etl.py
